[package]
name = "mtree"
version = "0.1.0"
edition = "2021"
authors = ["Simon Konzett"]
license = "LGPL-3.0"
description = "High-performance M-Tree data structure with SIMD optimizations"

[features]
default = []

[lib]
name = "mtree"
path = "src/lib.rs"

[[bench]]
name = "mtree_benches"
harness = false

[dependencies]
rayon = "1.8"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"